Los contenedores se despliegan correctamente, desde el buscador se puede acceder a la api. por ahora para correr los contenedores se deben entregar los parametros de la sieguiente manera. (docker run -e DB_USER=admin -e DB_PASSWORD=admin -e POSTGRES_PASSWORD=admin -e DB_NAME=admin -e POSTGRES_DB=admin letstrain_db) y el otro se ejecuta (docker run -p 5432 letstrain_back). las tablas se crean y se insertan correctamente

--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -5,12 +5,14 @@ services:
     env_file:
       - ./api/.env
     ports:
-      - 8081:8080
+      - 5432:5432
   
   db:
     build: db
     env_file:
-      - ./db/.env
+      - ../db/.env
+    volumes:
+      - db_data:/var/lib/postgresql/data
   
   pgadmin:
     image: dpage/pgadmin4
@@ -18,3 +20,6 @@ services:
       - 80:80
     env_file:
       - .env
+
+volumes:
+  db_data: test
