--- a/backend/db/.env
+++ b/backend/db/.env
@@ -1,4 +1,5 @@
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-DB_USER=
-DB_PASSWORD=
+POSTGRES_PASSWORD=ADMIN
+POSTGRES_DB=ADMIN
+DB_USER=ADMIN
+DB_PASSWORD=ADMIN
+DB_NAME=ADMIN
