--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
-PGADMIN_DEFAULT_EMAIL=
-PGADMIN_DEFAULT_PASSWORD=
+PGADMIN_DEFAULT_EMAIL= juan.gallo@gmail.com
+PGADMIN_DEFAULT_PASSWORD= pass123
+POSTGRES_PASSWORD= DB_PASSWORD
+POSTGRES_DB= POSTGRES_DB
+DB_USER= POSTGRES_DB 
+DB_PASSWORD= DB_PASSWORD
