--- a/backend/api/.env_tmp
+++ b/backend/api/.env_tmp
@@ -1,5 +1,5 @@
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
-DB_PORT=
+DB_USER=admin
+DB_PASSWORD=password 
+DB_NAME=lets_train
+DB_HOST=localhost
+DB_PORT=8080
