--- a/backend/api/Dockerfile
+++ b/backend/api/Dockerfile
@@ -1,7 +1,13 @@
-FROM node:22
+FROM node:18
 WORKDIR /myapp
+
 COPY src/package*.json .
+
 RUN npm install
+
 COPY  src/ ./
+
+EXPOSE 5432
+
 CMD [ "node", "app.js"]
 # CMD ["/bin/ls", "-lR", "controllers" ]
