--- a/backend/compose-template.yaml
+++ b/backend/compose-template.yaml
@@ -3,15 +3,17 @@ services:
   api: 
     build: api
     environment:
-      - DB_USER=
-      - DB_PASSWORD=
-      - DB_NAME=
-      - DB_HOST=
-      - DB_PORT=
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
     ports:
-      - 8081:8080
+      - 5432:5432
   
   db: 
     build: db
     environment:
-      - POSTGRES_PASSWORD=
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
